Crash in [@ aticfx64.dll | delete]
Categories
(Core :: Graphics: Layers, defect, P2)
Tracking
()
People
(Reporter: yoasif, Assigned: sotaro)
Details
(Keywords: crash)
Crash Data
Attachments
(2 files)
|
32.56 KB,
text/plain
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-8831ecc5-ef3f-4008-8007-267020191126.
Top 10 frames of crashing thread:
0 aticfx64.dll aticfx64.dll@0x5bd5d
1 aticfx64.dll aticfx64.dll@0x3714a
2 d3d11.dll operator delete
3 d3d11.dll Microsoft::WRL::Details::MakeAllocator<dxrt11::Direct3DDevice>::~MakeAllocator<dxrt11::Direct3DDevice>
4 @0x2930a611247
5 aticfx64.dll aticfx64.dll@0x52e68
6 aticfx64.dll aticfx64.dll@0x39e53
7 d3d11.dll CContext::TID3D11DeviceContext_UpdateSubresource_<2>
8 xul.dll mozilla::layers::D3D11YCbCrImage::SetData gfx/layers/D3D11YCbCrImage.cpp:92
9 xul.dll mozilla::VideoData::CreateAndCopyData dom/media/MediaData.cpp:360
Reported on https://www.reddit.com/r/firefox/comments/e21cm8/still_crashing_randomlyregularly_fresh_start_done/
| Reporter | ||
Comment 1•6 years ago
•
|
||
Seems like this driver version should be blacklisted from hw acceleration? User reports that setting media.hardware-video-decoding.enabled to false improves matters.
The latest version resolves the issue according to the user: https://www.reddit.com/r/firefox/comments/e21cm8/still_crashing_randomlyregularly_fresh_start_done/f8ztgab/
| Reporter | ||
Comment 3•6 years ago
|
||
Comment 4•6 years ago
|
||
(In reply to Asif Youssuff from comment #1)
Seems like this driver version should be blacklisted from hw acceleration? User reports that setting media.hardware-video-decoding.enabled to false improves matters.
The latest version resolves the issue according to the user: https://www.reddit.com/r/firefox/comments/e21cm8/still_crashing_randomlyregularly_fresh_start_done/f8ztgab/
From the above message, I think the issue is in driver. Hand this to graphic component to see if what graphic team can do with the problematic driver.
| Assignee | ||
Comment 6•6 years ago
•
|
||
(In reply to Asif Youssuff from comment #0)
This bug is for crash report bp-8831ecc5-ef3f-4008-8007-267020191126.
The crash seemed to happen during decoding video by software and uploading data to ID3D11Texture2D. Then it we want to address the crash, we might needs to blacklist hw acceleration.
| Assignee | ||
Comment 7•6 years ago
|
||
Device id(0x6778) seems to mean Caicos XT
https://pci-ids.ucw.cz/read/PC/1002/6778
| Assignee | ||
Comment 8•6 years ago
•
|
||
One possible fix is that blacklist AMD Caicos GPUs about FEATURE_DIRECT3D_11_LAYERS for old drivers, since majority of crashes happened on caicos.
| Assignee | ||
Comment 9•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Comment 10•6 years ago
|
||
Comment 11•6 years ago
|
||
| bugherder | ||
Comment 12•6 years ago
|
||
Please nominate this for Beta approval when you're comfortable doing so.
| Assignee | ||
Comment 13•6 years ago
|
||
Comment on attachment 9117632 [details]
Bug 1599981 - Blacklist old drivers on AMD Caicos GPU on Windows10
Beta/Release Uplift Approval Request
- User impact if declined: Tab crash could happen with old driver on AMD Caicos GPUs on Windows10 during video playback.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The patch just blocks a hardware acceleration with old driver.
- String changes made/needed: none
Comment 14•6 years ago
|
||
Comment on attachment 9117632 [details]
Bug 1599981 - Blacklist old drivers on AMD Caicos GPU on Windows10
Crash fix for older AMD drivers. Approved for 73.0b3.
Comment 15•6 years ago
|
||
| bugherder uplift | ||
Comment 16•6 years ago
|
||
Im affected to the Blacklisting on FF75 - so I had to downgrade to v74.01 (which is a mess - isnt possible without tricks)
FF75 is almost unusable without hardware acceleration on this device.
What are the solutions now? (except exchanging hw)?
- update gfx driver? (lead to slow videoplayback)
- set a switch in about config? Wich swich to activate hw acceleration again? (on own crashing risk of course)
Thanks
(I think it is a very bad way not to inform users actively in front of the update about the blacklisting (in words all users can understand) and leave them alone with stuttering FF after an update and with no easy way to solve this problem.)
| Reporter | ||
Comment 17•6 years ago
|
||
(In reply to Frank Tank from comment #16)
FF75 is almost unusable without hardware acceleration on this device.
What are the solutions now? (except exchanging hw)?
- update gfx driver? (lead to slow videoplayback)
If the updated driver is also bad, I would reach out to AMD to make sure they know so that they can fix the issue for you. That'd be my best suggestion.
Description
•