widget/GfxDriverInfo.h
@@ -112,6 +112,7 @@ enum DeviceFamily {
   IntelMobileHDGraphics,
   NvidiaBlockD3D9Layers,
   RadeonX1000,
+  RadeonCaicos,
   Geforce7300GT,
   Nvidia310M,
   Nvidia8800GTS,
